--- a/index.html
+++ b/index.html
@@ -19,30 +19,72 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="t2b-framework" class="anchor" href="#t2b-framework" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>T2B-framework</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Hi <a href="https://github.com/Pielco11" class="user-mention">@Pielco11</a> here,
+so this is my first project, I'm not so skilled so please be patient for my bugs.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="news-210416" class="anchor" href="#news-210416" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>News 21/04/16</h2>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Created v1 because reinvent the wheel is helpful but not useful.
+So added <strong>TLS</strong>/<strong>SSL</strong> support to make a sense of real security. At the time of writing I'm using ssl std lib., but if there is a why that I shouldn't use it please tell me (this is not my field).</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h2>
+<a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Merge the power of Python with the anonymity of Tor.
+This project aim to create a composite network of connected hosts. The main categories are:</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<ul>
+<li>bots (T-client)</li>
+<li>headquarters (TM-server)</li>
+<li>
+<em>boxes</em> (version =&lt; 0.1)</li>
+</ul>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Trust&amp;safe connections with <strong>AES</strong> and <strong>HMAC</strong>.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>This is just the beginning so you can't expect nothing special.</p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<h2>
+<a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Motivation</h2>
+
+<p>Started looking for one... ended up writing one.</p>
+
+<h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
+
+<ul>
+<li>Install GEOIP2, and download the database</li>
+<li>Install colored and clint</li>
+<li>Install wifi to scan the remote wifi area</li>
+</ul>
+
+<h2>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h2>
+
+<p>I found a lot of code all over the web, so as soon as possible I'll add the reference to the main authors.
+Last but not least, many people inspired me but citing everyone will crush the net.</p>
+
+<h2>
+<a id="known-bugs" class="anchor" href="#known-bugs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Known Bugs</h2>
+
+<ul>
+<li>[-] using a master key (solved, just for beta)</li>
+<li>[ ] ...let me know </li>
+</ul>
+
+<h2>
+<a id="abuse" class="anchor" href="#abuse" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Abuse</h2>
+
+<p>I'm <strong>NOT</strong> responsible for damages did by the abuse of this software.</p>
+
+<h2>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact me</h2>
+
+<p>You can find me on Twitter or you can add me on Ricochet ricochet:cuu6hyttxg66ew6n.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/pielco11/T2B-framework">T2b-framework</a> is maintained by <a href="https://github.com/pielco11">pielco11</a>.</span>
