Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -26,10 +26,20 @@
 so this is my first project, I'm not so skilled so please be patient for my bugs.</p>
 
 <h2>
-<a id="news-210416" class="anchor" href="#news-210416" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>News 21/04/16</h2>
+<a id="news" class="anchor" href="#news" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>News</h2>
 
-<p>Created v1 because reinvent the wheel is helpful but not useful.
-So added <strong>TLS</strong>/<strong>SSL</strong> support to make a sense of real security. At the time of writing I'm using ssl std lib., but if there is a why that I shouldn't use it please tell me (this is not my field).</p>
+<ul>
+<li>05/05/16:
+
+<ol>
+<li>Added <strong>s-wifi</strong> that let you to scan the remote Wifi network;</li>
+<li>Added <strong>info</strong> that let you retrieve some information about the target, like IP address and other OS information;</li>
+</ol>
+</li>
+<li>21/04/16:
+Created v1 because reinvent the wheel is helpful but not useful.
+So added <strong>TLS</strong>/<strong>SSL</strong> support to make a sense of real security. At the time of writing I'm using ssl std lib., but if there is a why that I shouldn't use it please tell me (this is not my field).</li>
+</ul>
 
 <h2>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h2>
