--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
       <h1>
 <a id="t2b-framework" class="anchor" href="#t2b-framework" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>T2B-framework</h1>
 
-<p>Hi <a href="https://github.com/Pielco11" class="user-mention">@Pielco11</a> here,
-so this is my first project, I'm not so skilled so please be patient for my bugs.</p>
+<blockquote>
+<p>Merge the power of Python with the anonymity of Tor.</p>
+</blockquote>
 
 <h2>
 <a id="news" class="anchor" href="#news" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>News</h2>
@@ -38,25 +39,19 @@ so this is my first project, I'm not so skilled so please be patient for my bugs
 </li>
 <li>21/04/16:
 Created v1 because reinvent the wheel is helpful but not useful.
-So added <strong>TLS</strong>/<strong>SSL</strong> support to make a sense of real security. At the time of writing I'm using ssl std lib., but if there is a why that I shouldn't use it please tell me (this is not my field).</li>
+So added <strong>TLS</strong>/<strong>SSL</strong> support to make a sense of real security. At the time of writing I'm using ssl std lib., but if there is a why that I shouldn't use it please tell me.</li>
 </ul>
 
 <h2>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h2>
 
-<p>Merge the power of Python with the anonymity of Tor.
-This project aim to create a composite network of connected hosts. The main categories are:</p>
+<p>This project aims to administrate a network of compromised hosts, keeping your identity private (thanks to Tor) and your connections secure (thanks to TLS/SSL). For many times botnets get stuck because the main servers became compromised, but this framework will let you keep yours C&amp;C safe and alive (well, this will do its best).</p>
 
-<ul>
-<li>bots (T-client)</li>
-<li>headquarters (TM-server)</li>
-<li>
-<em>boxes</em> (version =&lt; 0.1)</li>
-</ul>
-
-<p>Trust&amp;safe connections with <strong>AES</strong> and <strong>HMAC</strong>.</p>
-
-<p>This is just the beginning so you can't expect nothing special.</p>
+<ol>
+<li>T-master</li>
+<li>T-client</li>
+<li>Firewall (soon)</li>
+</ol>
 
 <h2>
 <a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Motivation</h2>
@@ -64,9 +59,30 @@ This project aim to create a composite network of connected hosts. The main cate
 <p>Started looking for one... ended up writing one.</p>
 
 <h2>
+<a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h2>
+
+<ul>
+<li>Linux (soon Windows and OS X)</li>
+<li>Python 2.7</li>
+<li>
+<a href="https://www.torproject.org/">Tor</a> and a HS.</li>
+<li><a href="https://github.com/kennethreitz/clint">Clint: Python Command-line Application Tools</a></li>
+<li><a href="https://pypi.python.org/pypi/colored">Colored</a></li>
+<li>
+<a href="https://pypi.python.org/pypi/geoip2">GeoIP</a> and the <a href="https://dev.maxmind.com/geoip/geoip2/geolite2/">DB</a>
+</li>
+<li><a href="https://wifi.readthedocs.io/en/latest/">Wifi, a Python interface</a></li>
+<li>
+<a href="https://www.openssl.org/">OpenSSL</a> to (generate Private Key and Cert)[<a href="https://msol.io/blog/tech/create-a-self-signed-ssl-certificate-with-openssl/">https://msol.io/blog/tech/create-a-self-signed-ssl-certificate-with-openssl/</a>]</li>
+</ul>
+
+<h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
 
 <ul>
+<li>Install Tor and initialize a HS</li>
+<li>Generate a S.S.C. (Self-Signed-Certificate) with Openssl (you can use the priv key of the HS)</li>
+<li>Modify the variables of the S.C. as you like (host, port, etc..)</li>
 <li>Install GEOIP2, and download the database</li>
 <li>Install colored and clint</li>
 <li>Install wifi to scan the remote wifi area</li>
@@ -82,8 +98,7 @@ Last but not least, many people inspired me but citing everyone will crush the n
 <a id="known-bugs" class="anchor" href="#known-bugs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Known Bugs</h2>
 
 <ul>
-<li>[-] using a master key (solved, just for beta)</li>
-<li>[ ] ...let me know </li>
+<li>wifi card in s-scan (see code..)</li>
 </ul>
 
 <h2>
@@ -94,7 +109,7 @@ Last but not least, many people inspired me but citing everyone will crush the n
 <h2>
 <a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact me</h2>
 
-<p>You can find me on Twitter or you can add me on Ricochet ricochet:cuu6hyttxg66ew6n.</p>
+<p>You can find me on Twitter or you can add me on <a href="https://ricochet.im/">Ricochet</a> ricochet:cuu6hyttxg66ew6n.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/pielco11/T2B-framework">T2B-framework</a> is maintained by <a href="https://github.com/pielco11">pielco11</a>.</span>
