Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ So added <strong>TLS</strong>/<strong>SSL</strong> support to make a sense of re
 </li>
 <li><a href="https://wifi.readthedocs.io/en/latest/">Wifi, a Python interface</a></li>
 <li>
-<a href="https://www.openssl.org/">OpenSSL</a> to (generate Private Key and Cert)[<a href="https://msol.io/blog/tech/create-a-self-signed-ssl-certificate-with-openssl/">https://msol.io/blog/tech/create-a-self-signed-ssl-certificate-with-openssl/</a>]</li>
+<a href="https://www.openssl.org/">OpenSSL</a> to <a href="https://msol.io/blog/tech/create-a-self-signed-ssl-certificate-with-openssl/">generate Private Key and Cert</a>
+</li>
 </ul>
 
 <h2>
