--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@ So added <strong>TLS</strong>/<strong>SSL</strong> support to make a sense of re
 </ul>
 
 <h2>
+<a id="screen-shot" class="anchor" href="#screen-shot" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screen-shot</h2>
+
+<p><img src="http://postimg.org/image/75gnfb0ld/" alt="Screenshot"></p>
+
+<h2>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h2>
 
 <p>This project aims to administrate a network of compromised hosts, keeping your identity private (thanks to Tor) and your connections secure (thanks to TLS/SSL). For many times botnets get stuck because the main servers became compromised, but this framework will let you keep yours C&amp;C safe and alive (well, this will do its best).</p>
