Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 <a id="news" class="anchor" href="#news" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>News</h2>
 
 <ul>
+<li>24/05/16:
+
+<ol>
+<li>Added <strong>protect</strong> function, now you can encrypt &amp; decrypt every file that you downloaded (in both directions) so you can keep safe your secrets (soon I'll add, obviously, <strong>HMAC</strong>)</li>
+</ol>
+</li>
 <li>05/05/16:
 
 <ol>
