Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <li>14/07/16:
 
 <ol>
-<li>Added LinuxAutoStart: this will add a hidden .desktop in ~/.config/autostart/, and hidden in StarUp applications;</li>
-<li>Added WindowsAutoStart: this will add a new reg key for the file, and set it hidden (<em>actually not tested at the time of writing</em>)</li>
-<li>Added FirefoxThief: this will dump <code>key3.db</code>,<code>logins.json</code> and <code>cert8.db</code> from the specified directory. So then you can extract the passwd.</li>
+<li>Added <code>LinuxAutoStart</code>: this will add a hidden .desktop in ~/.config/autostart/, and hidden in StarUp applications;</li>
+<li>Added <code>WindowsAutoStart</code>: this will add a new reg key for the file, and set it hidden (<em>actually not tested at the time of writing</em>)</li>
+<li>Added <code>FirefoxThief</code>: this will dump <code>key3.db</code>,<code>logins.json</code> and <code>cert8.db</code> from the specified directory. So then you can extract the passwd.</li>
 </ol>
 </li>
 <li>29/05/16:
