Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 <li>24/05/16:
 
 <ol>
-<li>Added <strong>protect</strong> function, now you can encrypt &amp; decrypt every file that you downloaded (in both directions) so you can keep safe your secrets (soon I'll add, obviously, <strong>HMAC</strong>)</li>
+<li>Added <code>protect</code> function, now you can encrypt &amp; decrypt every file that you downloaded (in both directions) so you can keep safe your secrets (soon I'll add, obviously, <strong>HMAC</strong>)</li>
 </ol>
 </li>
 <li>05/05/16:
 
 <ol>
-<li>Added <strong>s-wifi</strong> that let you to scan the remote Wifi network;</li>
-<li>Added <strong>info</strong> that let you retrieve some information about the target, like IP address and other OS information;</li>
+<li>Added <code>s-wifi</code> that let you to scan the remote Wifi network;</li>
+<li>Added <code>info</code> that let you retrieve some information about the target, like IP address and other OS information;</li>
 </ol>
 </li>
 <li>21/04/16:
@@ -95,7 +95,7 @@ But for this we all will wait. News are coming, changes are coming.</p>
 <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h2>
 
 <ul>
-<li>Linux (soon Windows and OS X)</li>
+<li>Linux/OS X (Windows not tested)</li>
 <li>Python 2.7</li>
 <li>
 <a href="https://www.torproject.org/">Tor</a> and a HS.</li>
@@ -109,6 +109,7 @@ But for this we all will wait. News are coming, changes are coming.</p>
 <a href="https://www.openssl.org/">OpenSSL</a> to <a href="https://msol.io/blog/tech/create-a-self-signed-ssl-certificate-with-openssl/">generate Private Key and Cert</a>
 </li>
 <li><a href="https://github.com/tqdm/tqdm">tqdm</a></li>
+<li>getpass</li>
 </ul>
 
 <h2>
