--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ So added <strong>TLS</strong>/<strong>SSL</strong> support to make a sense of re
 <h2>
 <a id="screen-shot" class="anchor" href="#screen-shot" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screen-shot</h2>
 
-<p><img src="https://s32.postimg.org/cgvk00mo4/screen_mod.jpg" alt="Screenshot"></p>
+<p><img src="https://s32.postimg.org/cgvk00mo4/screen_mod.jpg" alt="Screenshot1">
+<img src="https://s31.postimg.org/j7tnxj4xn/Schermata_da_2016_07_15_00_20_12.png" alt="Screenshot2"></p>
 
 <h2>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h2>
