--- a/index.html
+++ b/index.html
@@ -33,52 +33,66 @@
 </blockquote>
 
 <h2>
-<a id="news" class="anchor" href="#news" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>News</h2>
+<a id="status" class="anchor" href="#status" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Status</h2>
+
+<p><a href="https://travis-ci.org/pielco11/T2B-framework"><img src="https://travis-ci.org/pielco11/T2B-framework.svg?branch=master" alt="Build Status"></a></p>
+
+<h1>
+<a id="news" class="anchor" href="#news" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>News</h1>
 
 <ul>
+<li>21/07/16:
+
+<ul>
+<li>Added <code>VirusTotal check</code>: once the program is started, itself check is recognised as malware in the Database of <a href="https://www.virustotal.com/">VirusTotal</a>. Note that if the file was never scanned before, VT reports an "error". <strong>You have to register on VT to get an api key</strong>, <a href="https://www.virustotal.com/en/documentation/public-api/">here</a> for more infos.</li>
+<li>Added <code>HOOK</code> function: <em>still in dev</em>. Thanks to <a href="https://github.com/JeffHoogland">JeffHoogland</a> for <a href="https://github.com/JeffHoogland/pyxhook">pyxhook</a>, at the time of writing you can check if hook is running or not, and if you want stop it.</li>
+<li>Added <code>certificate auto extractor</code>: if the certificate.pem is not present in the directory, it'll extract form the code.</li>
+<li>Fixed <code>s-wifi</code>: Thanks to <a href="https://pypi.python.org/pypi/netifaces">netifaces</a> now you can check what netifaces are present and than choose the wifi card, no more if/ip-config.</li>
+</ul>
+</li>
 <li>14/07/16:
 
-<ol>
+<ul>
 <li>Added <code>LinuxAutoStart</code>: this will add a hidden .desktop in ~/.config/autostart/, and hidden in StarUp applications;</li>
 <li>Added <code>WindowsAutoStart</code>: this will add a new reg key for the file, and set it hidden (<em>actually not tested at the time of writing</em>)</li>
 <li>Added <code>FirefoxThief</code>: this will dump <code>key3.db</code>,<code>logins.json</code> and <code>cert8.db</code> from the specified directory. So then you can extract the passwd.</li>
-</ol>
+</ul>
 </li>
 <li>29/05/16:
 
-<ol>
+<ul>
 <li>Upgraded progress bar, thanks to <a href="https://github.com/tqdm/tqdm">tqdm</a>
 </li>
 <li>Added <strong>HMAC</strong> (coming for transfered files)</li>
 <li>Added PBKDF to sign the hash of the files</li>
-</ol>
+</ul>
 </li>
 <li>24/05/16:
 
-<ol>
+<ul>
 <li>Added <code>protect</code> function, now you can encrypt &amp; decrypt every file that you downloaded (in both directions) so you can keep safe your secrets (soon I'll add, obviously, <strong>HMAC</strong>)</li>
-</ol>
+</ul>
 </li>
 <li>05/05/16:
 
-<ol>
+<ul>
 <li>Added <code>s-wifi</code> that let you to scan the remote Wifi network;</li>
 <li>Added <code>info</code> that let you retrieve some information about the target, like IP address and other OS information;</li>
-</ol>
+</ul>
 </li>
 <li>21/04/16:
 Created v1 because reinvent the wheel is helpful but not useful.
 So added <strong>TLS</strong>/<strong>SSL</strong> support to make a sense of real security. At the time of writing I'm using ssl std lib., but if there is a why that I shouldn't use it please tell me.</li>
 </ul>
 
-<h2>
-<a id="screen-shot" class="anchor" href="#screen-shot" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screen-shot</h2>
+<h1>
+<a id="screen-shot" class="anchor" href="#screen-shot" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screen-shot</h1>
 
 <p><img src="https://s32.postimg.org/cgvk00mo4/screen_mod.jpg" alt="Screenshot1">
 <img src="https://s31.postimg.org/j7tnxj4xn/Schermata_da_2016_07_15_00_20_12.png" alt="Screenshot2"></p>
 
-<h2>
-<a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h2>
+<h1>
+<a id="description" class="anchor" href="#description" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Description</h1>
 
 <p>This project aims to administrate a network of compromised hosts, keeping your identity private (thanks to Tor) and your connections secure (thanks to TLS/SSL). For many times botnets get stuck because the main servers became compromised, but this framework will let you keep yours C&amp;C safe and alive (well, this will do its best).</p>
 
@@ -87,13 +101,13 @@ your Master server will be more stealth than ever and it <strong>won't</strong> 
 So from now on, you'll setup a "<em>firewall</em>" between you (Master) and your bots. The new firewall will be just a node from you and your bots, that will filter "legit" client from attackers.
 But for this we all will wait. News are coming, changes are coming.</p>
 
-<h2>
-<a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Motivation</h2>
+<h1>
+<a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Motivation</h1>
 
 <p>Started looking for one... ended up writing one.</p>
 
-<h2>
-<a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h2>
+<h1>
+<a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h1>
 
 <ul>
 <li>Linux/OS X (Windows not tested)</li>
@@ -111,43 +125,45 @@ But for this we all will wait. News are coming, changes are coming.</p>
 </li>
 <li><a href="https://github.com/tqdm/tqdm">tqdm</a></li>
 <li>getpass</li>
+<li><a href="https://pypi.python.org/pypi/simplejson">simplejson</a></li>
+<li><a href="https://pypi.python.org/pypi/netifaces">netifaces</a></li>
 </ul>
 
-<h2>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
+<h1>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h1>
 
 <ul>
 <li>Install Tor and initialize a HS</li>
 <li>Generate a S.S.C. (Self-Signed-Certificate) with Openssl (you can use the priv key of the HS)</li>
 <li>Modify the variables of the S.C. as you like (host, port, etc..)</li>
 <li>Install GEOIP2, and download the database</li>
-<li>Install colored and clint</li>
-<li>Install wifi to scan the remote wifi area</li>
+<li>run <code>pip install -r requirements</code>
+</li>
 </ul>
 
-<h2>
-<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h2>
+<h1>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h1>
 
 <p>I found a lot of code all over the web, so as soon as possible I'll add the reference to the main authors.
 Last but not least, many people inspired me but citing everyone will crush the net.</p>
 
-<h2>
-<a id="known-bugs" class="anchor" href="#known-bugs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Known Bugs</h2>
+<h1>
+<a id="known-bugs" class="anchor" href="#known-bugs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Known Bugs</h1>
 
 <ul>
-<li>wifi card in s-scan (see code..)</li>
-<li>progress bar when uploading files, is not so progress </li>
+<li>[x] wifi card in s-scan (fixed with netifaces)</li>
+<li>[ ] progress bar when uploading files, is not so progress </li>
 </ul>
 
-<h2>
-<a id="abuse" class="anchor" href="#abuse" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Abuse</h2>
+<h1>
+<a id="abuse" class="anchor" href="#abuse" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Abuse</h1>
 
 <p>I'm <strong>NOT</strong> responsible for damages did by the abuse of this software.</p>
 
-<h2>
-<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact me</h2>
+<h1>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact me</h1>
 
-<p>You can find me on Twitter or you can add me on <a href="https://ricochet.im/">Ricochet</a> ricochet:cuu6hyttxg66ew6n.</p>
+<p>You can find me on <a href="https://twitter.com/Pielco11">Twitter</a> or you can add me on <a href="https://ricochet.im/">Ricochet</a> <code>ricochet:cuu6hyttxg66ew6n</code>.</p>
         </section>
 
         <aside id="sidebar">
