Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -151,8 +151,10 @@ Last but not least, many people inspired me but citing everyone will crush the n
 <a id="known-bugs" class="anchor" href="#known-bugs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Known Bugs</h1>
 
 <ul>
-<li>[x] wifi card in s-scan (fixed with netifaces)</li>
-<li>[ ] progress bar when uploading files, is not so progress </li>
+<li>
+<strong>[SOLVED]</strong> wifi card in s-scan (fixed with netifaces)</li>
+<li>
+<strong>[NOT-SOLVED]</strong> progress bar when uploading files, is not so progress </li>
 </ul>
 
 <h1>
