Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Last but not least, many people inspired me but citing everyone will crush the n
 
 <ul>
 <li>
-<strong>[SOLVED]</strong> wifi card in s-scan (fixed with netifaces)</li>
+<strong>[SOLVED]</strong> wifi card in s-wifi (fixed with netifaces)</li>
 <li>
 <strong>[NOT-SOLVED]</strong> progress bar when uploading files, is not so progress </li>
 </ul>
