Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <li>21/07/16:
 
 <ul>
+<li>Added <code>RunMe.sh</code>: automated tool to setup the HS, certificate and all the necessary</li>
 <li>Added <code>VirusTotal check</code>: once the program is started, itself check is recognised as malware in the Database of <a href="https://www.virustotal.com/">VirusTotal</a>. Note that if the file was never scanned before, VT reports an "error". <strong>You have to register on VT to get an api key</strong>, <a href="https://www.virustotal.com/en/documentation/public-api/">here</a> for more infos.</li>
 <li>Added <code>HOOK</code> function: <em>still in dev</em>. Thanks to <a href="https://github.com/JeffHoogland">JeffHoogland</a> for <a href="https://github.com/JeffHoogland/pyxhook">pyxhook</a>, at the time of writing you can check if hook is running or not, and if you want stop it.</li>
 <li>Added <code>certificate auto extractor</code>: if the certificate.pem is not present in the directory, it'll extract form the code.</li>
