--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <li>21/07/16:
 
 <ul>
+<li>Corrected <code>HOOK</code>: now the script is handled with threads, no more external scripts or whatever. At the moment <code>HOOK</code> works only in Linux (that's why LinuxHOOKER), working on for windows.</li>
 <li>Added <code>RunMe.sh</code>: automated tool to setup the HS, certificate and all the necessary</li>
 <li>Added <code>VirusTotal check</code>: once the program is started, itself check is recognised as malware in the Database of <a href="https://www.virustotal.com/">VirusTotal</a>. Note that if the file was never scanned before, VT reports an "error". <strong>You have to register on VT to get an api key</strong>, <a href="https://www.virustotal.com/en/documentation/public-api/">here</a> for more infos.</li>
 <li>Added <code>HOOK</code> function: <em>still in dev</em>. Thanks to <a href="https://github.com/JeffHoogland">JeffHoogland</a> for <a href="https://github.com/JeffHoogland/pyxhook">pyxhook</a>, at the time of writing you can check if hook is running or not, and if you want stop it.</li>
@@ -152,8 +153,7 @@ Last but not least, many people inspired me but citing everyone will crush the n
 <a id="known-bugs" class="anchor" href="#known-bugs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Known Bugs</h1>
 
 <ul>
-<li>[x] wifi card in s-wifi (fixed with netifaces)</li>
-<li>[ ] progress bar when uploading files, is not so progress</li>
+<li>progress bar when uploading files, is not so progress</li>
 </ul>
 
 <h1>
