--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>T2B-framework</h1>
-        <h2>Tor-Based-Botnet framework</h2>
+        <h2>Cross-Platform Post Exploitation Toolkit</h2>
         <a href="https://github.com/pielco11/T2B-framework" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
