Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
 <a id="news" class="anchor" href="#news" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>News</h1>
 
 <ul>
+<li>30/07/16:
+
+<ul>
+<li>Added <code>mapMe</code> function, now you locate the target as Google does. You've to setup a Google Maps Api Key, more info <a href="https://developers.google.com/maps/documentation/geolocation/intro">here</a>. Yes, you've some limits but 2500 requests per day is a nice rate (VT has 4 per day). At the moment of writing it's not tested on Windows/Mac.</li>
+</ul>
+</li>
+<li>29/07/16:
+
+<ul>
+<li>Added <code>DownHTTP</code> function to download file from given url</li>
+</ul>
+</li>
 <li>28/07/16:
 
 <ul>
