Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,14 +51,26 @@
 <a id="todo" class="anchor" href="#todo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TODO</h1>
 
 <ul>
-<li>Correct change directory </li>
-<li>Reg key (you need to put the file name in the variable)</li>
+<li>[ ] Correct change directory </li>
+<li>[x] Reg key (you need to put the file name in the variable)</li>
 </ul>
 
 <h1>
 <a id="news" class="anchor" href="#news" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>News</h1>
 
 <ul>
+<li>12/10/16:
+
+<ul>
+<li>Added v3: now you can handle and choose multiple clients</li>
+</ul>
+</li>
+<li>11/10/16:
+
+<ul>
+<li>Added ASCII-ART</li>
+</ul>
+</li>
 <li>28/08/16:
 
 <ul>
